tests/snapshots/project__histograms_advanced_project_load.snap
---
source: tests/project.rs
expression: project
---
project_type: Exe
references:
  - uuid: 00020430-0000-0000-c000-000000000046
    unknown1:
      - 50
      - 46
      - 48
    unknown2:
      - 48
    path:
      - 46
      - 46
      - 92
      - 46
      - 46
      - 92
      - 46
      - 46
      - 92
      - 87
      - 105
      - 110
      - 100
      - 111
      - 119
      - 115
      - 92
      - 83
      - 121
      - 115
      - 87
      - 79
      - 87
      - 54
      - 52
      - 92
      - 115
      - 116
      - 100
      - 111
      - 108
      - 101
      - 50
      - 46
      - 116
      - 108
      - 98
    description:
      - 79
      - 76
      - 69
      - 32
      - 65
      - 117
      - 116
      - 111
      - 109
      - 97
      - 116
      - 105
      - 111
      - 110
objects: []
modules:
  - name:
      - 109
      - 111
      - 100
      - 80
      - 117
      - 98
      - 108
      - 105
      - 99
      - 86
      - 97
      - 114
      - 115
    path:
      - 109
      - 111
      - 100
      - 95
      - 80
      - 117
      - 98
      - 108
      - 105
      - 99
      - 86
      - 97
      - 114
      - 115
      - 46
      - 98
      - 97
      - 115
classes:
  - name:
      - 70
      - 97
      - 115
      - 116
      - 68
      - 114
      - 97
      - 119
      - 105
      - 110
      - 103
    path:
      - 70
      - 97
      - 115
      - 116
      - 68
      - 114
      - 97
      - 119
      - 105
      - 110
      - 103
      - 46
      - 99
      - 108
      - 115
  - name:
      - 112
      - 100
      - 79
      - 112
      - 101
      - 110
      - 83
      - 97
      - 118
      - 101
      - 68
      - 105
      - 97
      - 108
      - 111
      - 103
    path:
      - 112
      - 100
      - 79
      - 112
      - 101
      - 110
      - 83
      - 97
      - 118
      - 101
      - 68
      - 105
      - 97
      - 108
      - 111
      - 103
      - 46
      - 99
      - 108
      - 115
related_documents: []
designers: []
forms:
  - - 77
    - 97
    - 105
    - 110
    - 46
    - 102
    - 114
    - 109
  - - 72
    - 105
    - 115
    - 116
    - 111
    - 103
    - 114
    - 97
    - 109
    - 46
    - 102
    - 114
    - 109
user_controls: []
user_documents: []
other_properties:
  ? - 77
    - 83
    - 32
    - 84
    - 114
    - 97
    - 110
    - 115
    - 97
    - 99
    - 116
    - 105
    - 111
    - 110
    - 32
    - 83
    - 101
    - 114
    - 118
    - 101
    - 114
  : ? - 65
      - 117
      - 116
      - 111
      - 82
      - 101
      - 102
      - 114
      - 101
      - 115
      - 104
    : - 49
remove_unused_control_info: true
upgrade_activex_controls: true
res_file_32_path: []
icon_form:
  - 102
  - 114
  - 109
  - 77
  - 97
  - 105
  - 110
startup:
  - 102
  - 114
  - 109
  - 77
  - 97
  - 105
  - 110
help_file_path: []
title:
  - 65
  - 100
  - 118
  - 97
  - 110
  - 99
  - 101
  - 100
  - 32
  - 72
  - 105
  - 115
  - 116
  - 111
  - 103
  - 114
  - 97
  - 109
  - 115
exe_32_file_name:
  - 65
  - 100
  - 118
  - 97
  - 110
  - 99
  - 101
  - 100
  - 32
  - 72
  - 105
  - 115
  - 116
  - 111
  - 103
  - 114
  - 97
  - 109
  - 32
  - 86
  - 105
  - 101
  - 119
  - 101
  - 114
  - 46
  - 101
  - 120
  - 101
exe_32_compatible: []
dll_base_address: 285212672
path_32: []
command_line_arguments: ~
name:
  - 72
  - 105
  - 115
  - 116
  - 111
  - 103
  - 114
  - 97
  - 109
  - 95
  - 68
  - 101
  - 109
  - 111
description: []
debug_startup_component: []
help_context_id:
  - 48
compatibility_mode: NoCompatibility
version_32_compatibility: []
version_info:
  major: 1
  minor: 0
  revision: 28
  auto_increment_revision: 1
  company_name:
    - 84
    - 97
    - 110
    - 110
    - 101
    - 114
    - 32
    - 72
    - 101
    - 108
    - 108
    - 97
    - 110
    - 100
    - 32
    - 80
    - 114
    - 111
    - 100
    - 117
    - 99
    - 116
    - 105
    - 111
    - 110
    - 115
  file_description: []
  copyright: []
  trademark: []
  product_name:
    - 86
    - 105
    - 115
    - 117
    - 97
    - 108
    - 32
    - 66
    - 97
    - 115
    - 105
    - 99
    - 32
    - 73
    - 109
    - 97
    - 103
    - 101
    - 32
    - 72
    - 105
    - 115
    - 116
    - 111
    - 103
    - 114
    - 97
    - 109
    - 32
    - 69
    - 120
    - 97
    - 109
    - 112
    - 108
    - 101
  comments:
    - 68
    - 111
    - 119
    - 110
    - 108
    - 111
    - 97
    - 100
    - 101
    - 100
    - 32
    - 102
    - 114
    - 111
    - 109
    - 32
    - 119
    - 119
    - 119
    - 46
    - 116
    - 97
    - 110
    - 110
    - 101
    - 114
    - 104
    - 101
    - 108
    - 108
    - 97
    - 110
    - 100
    - 46
    - 99
    - 111
    - 109
server_support_files: Local
conditional_compile: []
compilation_type: NativeCode
optimization_type: FavorFastCode
favor_pentium_pro: "True"
code_view_debug_info: NotCreated
aliasing: AssumeNoAliasing
bounds_check: NoBoundsCheck
overflow_check: NoOverflowCheck
floating_point_check: true
pentium_fdiv_bug_check: true
unrounded_floating_point: true
start_mode: false
unattended: false
retained: false
thread_per_object: 0
threading_model: ApartmentThreaded
max_number_of_threads: 1
debug_startup_option: WaitForComponentCreation
use_existing_browser: true
property_page: []
